--- a/css/ceceppaml.css
+++ b/css/ceceppaml.css
@@ -181,7 +181,6 @@ table.ceceppaml td {
 	border-top-left-radius:0px;
 }.CSSTableGenerator table{
 	width:100%;
-	height:100%;
 	margin:0px;padding:0px;
 }.CSSTableGenerator tr:last-child td:last-child {
 	-moz-border-radius-bottomright:0px;
@@ -244,7 +243,7 @@ table.ceceppaml td {
 	border:0px solid #cccccc;
 	text-align:center;
 	border-width:0px 0px 1px 1px;
-	font-size:14px;
+	font-size:14px !important;
 	font-family:Arial;
 	font-weight:bold;
 	color:#000000;
@@ -322,9 +321,9 @@ img.delete {
 	text-decoration: none;
 }
 .cml-box-translations h4, #ceceppaml-meta-box h4 {
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-  font-weight: 300;
-	font-size: 1.6em;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+    font-weight: 300;
+    font-size: 1.2em;
 }
 .cml-box-translations ul li {
 	background: rgb(238,238,238); /* Old browsers */
@@ -338,7 +337,7 @@ img.delete {
 	border-radius: 4px;
 	border: 1px solid #bbb;
 	padding: 5px;
-	height: 40px;
+	height: 25px;
 }
 .cml-box-translations ul li.no-translation {
 	background: rgb(180,223,91); /* Old browsers */
@@ -354,9 +353,11 @@ img.delete {
 	display: inline-block;
 	overflow: hidden;
 	padding-left: 5px;
-	height: 30px;
-	max-height: 30px;
+	height: 25px;
+	max-height: 25px;
 	width: 190px; max-width: 190px;
+	position: relative;
+	top: -8px;
 }
 
 .cml-box-translations li img.add {
