--- a/css/ceceppaml.css
+++ b/css/ceceppaml.css
@@ -11,8 +11,8 @@ table.ceceppaml, table.ceceppaml_posts {
   margin-bottom:0.7em;
 }
 table#ceceppaml-table {
-  width: 90% !important;
-  max-width: 90%;
+/*  width: 90%;
+  max-width: 90%;*/
 }
 table.ceceppaml tbody tr th {
 }
@@ -200,7 +200,17 @@ table.ceceppaml td {
 .CSSTableGenerator tr:first-child td:last-child{
 	border-width:0px 0px 1px 1px;
 }
-
+.CSSTableGenerator h3.hndle, .cml-donate h3  {
+  cursor: default !important;
+  padding: 5px;
+  font-size: 1.3em;
+}
+.CSSTableGenerator h3 input {
+  margin-top: 2px;
+}
+.CSSTableGenerator .handlediv, .cml-donate .handlediv {
+  display: none;
+}
 img.delete {
   background: rgba(255, 0, 0, 0.2);
   padding: 2px;
@@ -213,32 +223,12 @@ img.delete {
 }
 .cml-donate {
   vertical-align: top;
-  border-color: #dfdfdf;
-  -webkit-box-shadow: inset 0 1px 0 #fff;
-  box-shadow: inset 0 1px 0 #fff;
-  -webkit-border-radius: 3px;
   display: inline-block;
-  border-radius: 3px;
-  background-image: -webkit-linear-gradient(bottom,#f5f5f5,#f9f9f9);
-  background-image: -moz-linear-gradient(bottom,#f5f5f5,#f9f9f9);
-  background-image: -o-linear-gradient(bottom,#f5f5f5,#f9f9f9);
-  background-image: linear-gradient(to top,#f5f5f5,#f9f9f9);
   min-width: 250px;
   max-width: 250px;
   width: 250px;
-  line-height: 1;
-}
-.cml-donate h3 {
-  font-size: 1.2em;
-  border-bottom-color: #dfdfdf;
-  text-shadow: #fff 0 1px 0;
-  -webkit-box-shadow: 0 1px 0 #fff;
-  box-shadow: 0 1px 0 #fff;
-  padding-left: 5px;
-}
-.cml-donate .content {
-  padding: 5px;
-  line-height: 1.5em;
+  margin-top: 16px;
+  margin-left: 5px;
 }
 
 .cml-box-translations a {
@@ -304,6 +294,7 @@ div.block-right {
   display: table-cell;
 }
 
+
 @media only screen and (orientation:landscape) and (min-width:1300px) {
   .cml-content {
     width: 900px !important;
@@ -314,4 +305,3 @@ div.block-right {
     max-width: 900px !important;
   }
 }
-
