--- a/css/cmllang.css
+++ b/css/cmllang.css
@@ -4,27 +4,40 @@ h3 {
   padding-bottom:5px;
 }
 
-table.ceceppaml, table.ceceppaml_posts {
-  width: 99%;
+table.ceceppaml, table.ceceppaml table, table.ceceppaml_posts {
+  border:1px solid #DFDFDF;
   border-spacing:0;
   border-collapse:collapse;
-  margin-bottom:0.7em;
+  width: 100% !important;
 }
 
-table.ceceppaml tbody tr th {
-  border-bottom: 1px solid #323232;
+table.ceceppaml tbody tr th, table.ceceppaml tr:first-child {
+  background: #ffffff; /* Old browsers */
+  background: -moz-linear-gradient(top,  #ffffff 0%, #ececec 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#ececec)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #ffffff 0%,#ececec 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #ffffff 0%,#ececec 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #ffffff 0%,#ececec 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #ffffff 0%,#ececec 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ececec',GradientType=0 ); /* IE6-9 */
+  font-size: 1.3em;
+  border-bottom: 1px solid #DFDFDF !important;
+  text-align: center;
+  height: 30px;
 }
 
 table.ceceppaml tbody tr {
-   border-bottom: 1px solid #BBBBBB;
-	margin-top:20px;
-	margin-bottom: 20px;
+  background: #F9F9F9;
+  border-bottom: 1px solid #BBBBBB;
+  margin-top:20px;
+  margin-bottom: 20px;
 }
 
 table.ceceppaml input {
-  border: none;
-  border-bottom:1px dashed #c0c0c0;
+  border:1px solid #e0e0e0;
   width: 100%;
+  padding: 5px;
+  margin: 5px;
 }
 table.ceceppaml input:focus {
   background: #F0FF80;
@@ -47,6 +60,29 @@ table.ceceppaml_posts tr:hover {
   background: #FFFFBF;
 }
 table.ceceppaml td {
+}
+
+table.ceceppaml table tr {
+  background: #BFD9FF;
+}
+
+table.ceceppaml table {
+  border: none;
+}
+
+.cml-donate {
+  margin-top: 0;
+}
+table.ceceppaml table tr:first-child {
+  background: #f0f9ff; /* Old browsers */
+background: -moz-linear-gradient(top,  #f0f9ff 0%, #cbebff 47%, #a1dbff 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f0f9ff), color-stop(47%,#cbebff), color-stop(100%,#a1dbff)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #f0f9ff 0%,#cbebff 47%,#a1dbff 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #f0f9ff 0%,#cbebff 47%,#a1dbff 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #f0f9ff 0%,#cbebff 47%,#a1dbff 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #f0f9ff 0%,#cbebff 47%,#a1dbff 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f9ff', endColorstr='#a1dbff',GradientType=0 ); /* IE6-9 */
+border-bottom:1px solid #88bad8;
 }
 .ceceppa-ml-flags {
   /* max-width: 165px; */
@@ -99,146 +135,24 @@ table.ceceppaml td {
   background:#0000FF;
 }
 
-
-.CSSTableGenerator {
-	margin:0px;padding:0px;
-	width:100%;
-	border:1px solid #cccccc;
-	-moz-border-radius-bottomleft:0px;
-	-webkit-border-bottom-left-radius:0px;
-	border-bottom-left-radius:0px;
-	-moz-border-radius-bottomright:0px;
-	-webkit-border-bottom-right-radius:0px;
-	border-bottom-right-radius:0px;
-	-moz-border-radius-topright:0px;
-	-webkit-border-top-right-radius:0px;
-	border-top-right-radius:0px;
-	-moz-border-radius-topleft:0px;
-	-webkit-border-top-left-radius:0px;
-	border-top-left-radius:0px;
-}.CSSTableGenerator table{
-	width:100%;
-	height:100%;
-	margin:0px;padding:0px;
-}.CSSTableGenerator tr:last-child td:last-child {
-	-moz-border-radius-bottomright:0px;
-	-webkit-border-bottom-right-radius:0px;
-	border-bottom-right-radius:0px;
-}
-.CSSTableGenerator table tr:first-child td:first-child {
-	-moz-border-radius-topleft:0px;
-	-webkit-border-top-left-radius:0px;
-	border-top-left-radius:0px;
-}
-
-.CSSTableGenerator table tr:first-child td:last-child {
-	-moz-border-radius-topright:0px;
-	-webkit-border-top-right-radius:0px;
-	border-top-right-radius:0px;
-}.CSSTableGenerator tr:last-child td:first-child{
-	-moz-border-radius-bottomleft:0px;
-	-webkit-border-bottom-left-radius:0px;
-	border-bottom-left-radius:0px;
-}.CSSTableGenerator tr:hover td{
-}
-
-.CSSTableGenerator td{
-	vertical-align:middle;
-	background-color: #EEEEEE;
-	border:1px solid #cccccc;
-	border-width:0px 1px 1px 0px;
-	text-align:left;
-	padding:7px;
-	font-size:12px;
-	font-family:Arial;
-	font-weight:normal;
-	color:#000000;
-}.CSSTableGenerator tr:last-child td{
-	border-width:0px 1px 0px 0px;
-}.CSSTableGenerator tr td:last-child{
-	border-width:0px 0px 1px 0px;
-}.CSSTableGenerator tr:last-child td:last-child{
-	border-width:0px 0px 0px 0px;
-}
-.CSSTableGenerator tr:nth-child(odd) td {
-	background-color:#ABD7E3 !important;
-}
-
-.CSSTableGenerator tr:first-child td{
-	background-color: #EEEEEE;
-	border:0px solid #cccccc;
-	text-align:center;
-	border-width:0px 0px 1px 1px;
-	font-size:14px;
-	font-family:Arial;
-	font-weight:bold;
-	color:#000000;
-}
-.CSSTableGenerator tr:first-child td{
-	background:-o-linear-gradient(bottom, #cccccc 5%, #b2b2b2 100%);	
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #cccccc), color-stop(1, #b2b2b2) );
-	background:-moz-linear-gradient( center top, #cccccc 5%, #b2b2b2 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#cccccc", endColorstr="#b2b2b2");	
-	background: -o-linear-gradient(top,#cccccc,b2b2b2);
-	background-color:#cccccc;
-	border:0px solid #cccccc;
-	text-align:center;
-	border-width:0px 0px 1px 1px;
-	font-size:14px;
-	font-family:Arial;
-	font-weight:bold;
-	color:#000000;
-}
-.CSSTableGenerator tr:first-child td:first-child{
-	border-width:0px 0px 1px 0px;
-}
-.CSSTableGenerator tr:first-child td:last-child{
-	border-width:0px 0px 1px 1px;
-}
-
 img.delete {
-	background: rgba(255, 0, 0, 0.2);
-	padding: 2px;
+  background: rgba(255, 0, 0, 0.2);
+  padding: 2px;
+}
+.ceceppa-form {
+  display: inline-block;
+  max-width: 600px;
+  width: 600px;
 }
 .ceceppa-form ul.cml-settings li {
-	display: table-cell;
-	padding-right: 20px;
+  display: table-cell;
+  padding-right: 20px;
 }
 .ceceppa-form ul li:last-child {
 	padding: 0;
 }
 .ceceppa-form label {
-		word-wrap:normal;	
-	}
-.cml-donate {
-	border-color: #dfdfdf;
-	-webkit-box-shadow: inset 0 1px 0 #fff;
-	box-shadow: inset 0 1px 0 #fff;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	background-image: -webkit-linear-gradient(bottom,#f5f5f5,#f9f9f9);
-	background-image: -moz-linear-gradient(bottom,#f5f5f5,#f9f9f9);
-	background-image: -o-linear-gradient(bottom,#f5f5f5,#f9f9f9);
-	background-image: linear-gradient(to top,#f5f5f5,#f9f9f9);
-	min-width: 250px;
-	max-width: 250px;
-	margin-bottom: 20px;
-	padding: 0;
-	border-width: 1px;
-	border-style: solid;
-	line-height: 1;
-}
-.cml-donate h3 {
-	font-size: 1.2em;
-	border-bottom-color: #dfdfdf;
-	text-shadow: #fff 0 1px 0;
-	-webkit-box-shadow: 0 1px 0 #fff;
-	box-shadow: 0 1px 0 #fff;
-	padding-left: 5px;
-}
-.cml-donate .content {
-	padding: 5px;
-	line-height: 1.5em;
+  word-wrap:normal;	
 }
 
 .cml-box-translations a {
@@ -286,4 +200,15 @@ img.delete {
 
 .cml-box-translations li img.add {
 	padding-top: 15px;
+}
+
+@media only screen and (orientation:landscape) and (min-width:1300px) {
+  .cml-content {
+    width: 900px !important;
+  }
+
+  .ceceppa-form {
+    min-width: 900px !important;
+    max-width: 900px !important;
+  }
 }
