--- a/css/float.css
+++ b/css/float.css
@@ -2,7 +2,7 @@ div#flying-flags {
   background: #c0c0c0;
   border:1px solid #a2a2a2;
   padding:5px;
-  position: absolute;
+  position: fixed;
   top: 0px; 
   left: 80%;
   z-index: 999;
