--- a/css/cmllang.css
+++ b/css/cmllang.css
@@ -1,89 +1,3 @@
-h3 {
-  border-bottom:1px solid #bbb;
-  font-size: 2em;
-  padding-bottom:5px;
-}
-
-table.ceceppaml, table.ceceppaml table, table.ceceppaml_posts {
-  border:1px solid #DFDFDF;
-  border-spacing:0;
-  border-collapse:collapse;
-  width: 100% !important;
-}
-
-table.ceceppaml tbody tr th, table.ceceppaml tr:first-child {
-  background: #ffffff; /* Old browsers */
-  background: -moz-linear-gradient(top,  #ffffff 0%, #ececec 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#ececec)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #ffffff 0%,#ececec 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #ffffff 0%,#ececec 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #ffffff 0%,#ececec 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #ffffff 0%,#ececec 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ececec',GradientType=0 ); /* IE6-9 */
-  font-size: 1.3em;
-  border-bottom: 1px solid #DFDFDF !important;
-  text-align: center;
-  height: 30px;
-}
-
-table.ceceppaml tbody tr {
-  background: #F9F9F9;
-  border-bottom: 1px solid #BBBBBB;
-  margin-top:20px;
-  margin-bottom: 20px;
-}
-
-table.ceceppaml input {
-  border:1px solid #e0e0e0;
-  width: 100%;
-  padding: 5px;
-  margin: 5px;
-}
-table.ceceppaml input:focus {
-  background: #F0FF80;
-}
-
-table.ceceppaml_posts th {
-  background: #555;
-  color: #fff;
-}
-
-table.ceceppaml_posts tr {
-  height: 2.5em;
-}
-
-table.ceceppaml_posts tr:nth-child(even) {
-  background: #ddd;
-}
-
-table.ceceppaml_posts tr:hover {
-  background: #FFFFBF;
-}
-table.ceceppaml td {
-}
-
-table.ceceppaml table tr {
-  background: #BFD9FF;
-}
-
-table.ceceppaml table {
-  border: none;
-}
-
-.cml-donate {
-  margin-top: 0;
-}
-table.ceceppaml table tr:first-child {
-  background: #f0f9ff; /* Old browsers */
-background: -moz-linear-gradient(top,  #f0f9ff 0%, #cbebff 47%, #a1dbff 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f0f9ff), color-stop(47%,#cbebff), color-stop(100%,#a1dbff)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #f0f9ff 0%,#cbebff 47%,#a1dbff 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #f0f9ff 0%,#cbebff 47%,#a1dbff 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #f0f9ff 0%,#cbebff 47%,#a1dbff 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #f0f9ff 0%,#cbebff 47%,#a1dbff 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f9ff', endColorstr='#a1dbff',GradientType=0 ); /* IE6-9 */
-border-bottom:1px solid #88bad8;
-}
 .ceceppa-ml-flags {
   /* max-width: 165px; */
 }
@@ -136,13 +50,8 @@ border-bottom:1px solid #88bad8;
 }
 
 img.delete {
-  background: rgba(255, 0, 0, 0.2);
-  padding: 2px;
-}
-.ceceppa-form {
-  display: inline-block;
-  max-width: 600px;
-  width: 600px;
+/*   background: rgba(255, 0, 0, 0.2); */
+/*   padding: 2px; */
 }
 .ceceppa-form ul.cml-settings li {
   display: table-cell;
@@ -156,9 +65,11 @@ img.delete {
 }
 
 .cml-box-translations a {
-	display: block;
-	color: #000;
-	text-decoration: none;
+  display: block;
+  color: #000;
+  height: 40px;
+  text-decoration: none;
+  vertical-align: middle;
 }
 .cml-box-translations h4 {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
@@ -166,49 +77,49 @@ img.delete {
 	font-size: 1.6em;
 }
 .cml-box-translations ul li {
-	background: rgb(238,238,238); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(204,204,204,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(238,238,238,1)), color-stop(100%,rgba(204,204,204,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
-	border-radius: 4px;
-	border: 1px solid #bbb;
-	padding: 5px;
-	height: 40px;
+  background: rgb(238,238,238); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(204,204,204,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(238,238,238,1)), color-stop(100%,rgba(204,204,204,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  padding: 5px;
+  height: 40px;
+  line-height: 50px;
 }
 .cml-box-translations ul li.no-translation {
-	background: rgb(180,223,91); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(180,223,91,1) 0%, rgba(180,223,91,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(180,223,91,1)), color-stop(100%,rgba(180,223,91,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(180,223,91,1) 0%,rgba(180,223,91,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(180,223,91,1) 0%,rgba(180,223,91,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(180,223,91,1) 0%,rgba(180,223,91,1) 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba(180,223,91,1) 0%,rgba(180,223,91,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4df5b', endColorstr='#b4df5b',GradientType=0 ); /* IE6-9 */
+  background: rgb(180,223,91); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(180,223,91,1) 0%, rgba(180,223,91,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(180,223,91,1)), color-stop(100%,rgba(180,223,91,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(180,223,91,1) 0%,rgba(180,223,91,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(180,223,91,1) 0%,rgba(180,223,91,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(180,223,91,1) 0%,rgba(180,223,91,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(180,223,91,1) 0%,rgba(180,223,91,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4df5b', endColorstr='#b4df5b',GradientType=0 ); /* IE6-9 */
 }
-.cml-box-translations li span.cml_add_text {
-	display: inline-block;
-	overflow: hidden;
-	padding-left: 5px;
-	height: 30px;
-	max-height: 30px;
-	width: 190px; max-width: 190px;
+.cml-box-translations li span {
+  display: inline-block;
+  overflow: hidden;
+  padding-left: 5px;
+  height: 40px;
+  max-height: 30px;
+  width: 190px; max-width: 190px;
 }
 
 .cml-box-translations li img.add {
 	padding-top: 15px;
 }
 
+.widefat td {
+  overflow: visible !important;
+}
+
 @media only screen and (orientation:landscape) and (min-width:1300px) {
   .cml-content {
     width: 900px !important;
-  }
-
-  .ceceppa-form {
-    min-width: 900px !important;
-    max-width: 900px !important;
   }
 }
