--- a/css/ceceppaml.css
+++ b/css/ceceppaml.css
@@ -65,10 +65,12 @@ h3 {
 div.block-left {
   display: table-cell;
   width: 400px;
+  vertical-align: top;
 }
 
 div.block-right {
   display: table-cell;
+  vertical-align: top;
 }
 
 table.mo-table {
