--- a/css/ceceppaml.css
+++ b/css/ceceppaml.css
@@ -207,5 +207,14 @@ img.not-available {
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {  
-.tab-strings p.submit { margin-top: -40px; }  
+/* .tab-strings p.submit { margin-top: -40px; }   */
 }  
+
+dl.cml_options dd {
+  padding-top: 10px;
+}
+
+dl.cml_options dd label {
+  display: block;
+  line-height: 20px;
+}
