--- a/css/admin.css
+++ b/css/admin.css
@@ -1023,7 +1023,7 @@ display: none !important;
   }
 
   .ceceppaml-theme-translations th:nth-child(n+2) {
-    width: 20px;
+    width: 50%;
   }
 
   h2 .textdomain img {
@@ -1051,16 +1051,16 @@ display: none !important;
   .ceceppaml-trans-fields input {
     display: inline-block;
     vertical-align: middle;
+    opacity: 0.8;
   }
   
   .ceceppaml-trans-fields input[type="text"],
   .ceceppaml-trans-fields textarea {
-    width: 95%;
+    width: 90%;
     margin-right: 10px;
   }
   
   .ceceppaml-theme-translations tr.row-domain:hover {
-    cursor: pointer;
     background: #FFFFE5;
   }
   .ceceppaml-theme-translations tr.row-hidden {
@@ -1164,7 +1164,7 @@ margin-bottom: 10px;
     display: inline-block;
     vertical-align: middle;
     margin-left: 5px;
-    margin-top: -1px;
+    margin-top: -4px;
   }
 
   .cml-dropdown-me  > li > ul {
@@ -1549,4 +1549,84 @@ iframe.cml-iframe {
 
 form.ceceppa-form-translations table tbody tr:hover td {
   background: #FFFFEB;
+}
+
+select.cml_linked_post {
+  max-width: 230px;
+}
+
+ul.cml-dropdown-me ul li > span {
+  display: inline-block;
+  vertical-align: middle;
+}
+ul.cml-dropdown-me ul li > span.title {
+  width: 89%;
+  padding-left: 10px;
+}
+
+ul.cml-dropdown-me ul .img {
+  display: inline-block;
+  vertical-align: middle;
+  border-radius: 14px;
+  box-shadow: 0 0 2px rgba(0,0,0,1);
+  opacity: 0.5;
+  width: 12px;
+  height: 12px;
+  position: relative;
+  overflow: hidden;;
+}
+
+  ul.cml-dropdown-me ul img {
+    height: 12px;
+    width: 12px;
+    position: absolute;
+    top: 0;
+  }
+
+.cml-quickedit-none {
+  opacity: 0.7;
+  transition: all 0.2s ease;
+}
+
+  .cml-quickedit-none:hover {
+    opacity: 1;
+  }
+
+/* Tags */
+ul.cml-tagslist > li {
+   display: inline-block;
+   padding: 10px;
+}
+
+ul.cml-tagslist .button-mini {
+  height: 20px !important;
+  width: 10px !important;
+  position: absolute;
+  transition: all 0.2s ease;
+  opacity: 0.3;
+  margin-left: 2px;
+}
+ul.cml-tagslist .button-mini img {
+  height: 10px;
+  position: relative;
+  top: -4px;
+  left: -4px;
+}
+  ul.cml-tagslist li:hover .button-mini {
+    opacity: 1;
+  }
+
+  ul.cml-tagslist .title {
+    display: inline-block;
+    margin-right: 0;
+    padding-left: 5px;
+  }
+
+ul.cml-tagslist .button-mini.button-confirm {
+  height: 28px !important;
+}
+
+ul.cml-tagslist .button-mini.button-confirm img {
+  top: 0;
+  left: -6px;
 }
