--- a/css/admin.css
+++ b/css/admin.css
@@ -47,7 +47,7 @@ label.cml-disabled {
   text-transform: uppercase;
 }
 
-  .cml-separator-li {
+  li .cml-separator-li {
     background: #222;
     min-height: 24px;
   }
@@ -1023,7 +1023,7 @@ display: none !important;
   }
 
   .ceceppaml-theme-translations th:nth-child(n+2) {
-    width: 20px;
+    width: 50%;
   }
 
   h2 .textdomain img {
@@ -1051,16 +1051,20 @@ display: none !important;
   .ceceppaml-trans-fields input {
     display: inline-block;
     vertical-align: middle;
+    opacity: 0.8;
   }
   
   .ceceppaml-trans-fields input[type="text"],
   .ceceppaml-trans-fields textarea {
-    width: 95%;
+    width: 85%;
     margin-right: 10px;
   }
-  
+
+  .cml-fuzzy {
+    display: inline-block;
+  }
+
   .ceceppaml-theme-translations tr.row-domain:hover {
-    cursor: pointer;
     background: #FFFFE5;
   }
   .ceceppaml-theme-translations tr.row-hidden {
@@ -1142,6 +1146,7 @@ margin-bottom: 10px;
   border:1px solid #ccc;
   cursor: pointer;
   height: 26px;
+  overflow: hidden;
 }
   .cml-dropdown-me  > li > span {
     height: 25px;
@@ -1164,7 +1169,7 @@ margin-bottom: 10px;
     display: inline-block;
     vertical-align: middle;
     margin-left: 5px;
-    margin-top: -1px;
+    margin-top: -4px;
   }
 
   .cml-dropdown-me  > li > ul {
@@ -1417,6 +1422,8 @@ div.cml-ex-indent {
   background: #fff;
   display: block;
   padding: 10px;
+  padding-bottom: 50px;
+  position: relative;
 }
 
 #cml-wizard > .content .logo-big:before {
@@ -1455,8 +1462,10 @@ color: #f00;
 }
 
 .cml-skip {
-  margin: 10px;
-  text-align: right;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  margin-top: 15px !important;
 }
 
 .cml-done {
@@ -1549,4 +1558,198 @@ iframe.cml-iframe {
 
 form.ceceppa-form-translations table tbody tr:hover td {
   background: #FFFFEB;
+}
+
+select.cml_linked_post {
+  max-width: 230px;
+}
+
+ul.cml-dropdown-me ul li > span {
+  display: inline-block;
+  vertical-align: middle;
+}
+ul.cml-dropdown-me ul li > span.title {
+  width: 89%;
+  padding-left: 10px;
+}
+
+ul.cml-dropdown-me ul .img {
+  display: inline-block;
+  vertical-align: middle;
+  border-radius: 14px;
+  box-shadow: 0 0 2px rgba(0,0,0,1);
+  opacity: 0.5;
+  width: 12px;
+  height: 12px;
+  position: relative;
+  overflow: hidden;;
+}
+
+  ul.cml-dropdown-me ul img {
+    height: 12px;
+    width: 12px;
+    position: absolute;
+    top: 0;
+  }
+
+.cml-quickedit-none {
+  opacity: 0.7;
+  transition: all 0.2s ease;
+}
+
+  .cml-quickedit-none:hover {
+    opacity: 1;
+  }
+
+/* Tags */
+ul.cml-tagslist > li {
+   display: inline-block;
+   padding: 10px;
+}
+
+ul.cml-tagslist .button-mini {
+  height: 20px !important;
+  width: 10px !important;
+  position: absolute;
+  transition: all 0.2s ease;
+  opacity: 0.3;
+  margin-left: 2px;
+}
+ul.cml-tagslist .button-mini img {
+  height: 10px;
+  position: relative;
+  top: -4px;
+  left: -4px;
+}
+  ul.cml-tagslist li:hover .button-mini {
+    opacity: 1;
+  }
+
+  ul.cml-tagslist .title {
+    display: inline-block;
+    margin-right: 0;
+    padding-left: 5px;
+  }
+
+ul.cml-tagslist .button-mini.button-confirm {
+  height: 28px !important;
+}
+
+ul.cml-tagslist .button-mini.button-confirm img {
+  top: 0;
+  left: -6px;
+}
+
+/* */
+.compat-attachment-fields {
+  width: 100%;
+}
+
+*[class*="-cml-media-"] td {
+  width: 80%;
+}
+
+*[class*="-cml-media-"] textarea,
+*[class*="-cml-media-"] input {
+  width: 100%;
+}
+
+/* Addons */
+.cml-addons .cml-addon {
+   border-left:4px solid #dd3d36;
+   box-shadow: 1px 1px 3px rgba( 0, 0, 0, 0.15 );
+   padding: 0 10px;
+   margin-bottom: 30px;
+}
+  .cml-addons .cml-addon.active {
+       border-left:4px solid #7AD03A;
+   }
+
+.cml-addons .cml-addon:last-child {
+  margin-bottom: 0;
+}
+
+.cml-addons .cml-addon .name {
+  font-size: 120%;
+  font-weight: bold;
+  padding: 10px 10px 10px 0;
+}
+
+
+.cml-addons .cml-addon .description {
+  color: #444;
+}
+
+.cml-addons .cml-addon .links {
+  text-align: right;
+  padding: 10px;
+}
+
+
+.cml-addons .cml-addon .links span {
+  color: #aaa;
+  padding: 10px;
+}
+
+.cml-addons .cml-addon .links a {
+  text-decoration: none;
+}
+
+.cml-addons .cml-addon .links a:hover {
+  text-decoration: underline;
+}
+
+
+.cml-dropdown-me .title.current {
+  font-style:italic;
+}
+
+.cml-dropdown-me .title + .current {
+  color: #aaa;
+  font-style:italic;
+  font-weight: bold;
+  text-align: right;
+  display: block;
+  width: 100%;
+}
+
+/*.media-frame-content .attachments-browser table tr[class*="cml-media-alternative"] {
+  display: none;
+}
+*/
+.cml-titlewrap {
+  position: relative;
+  margin: 10px 0 0 30px;
+}
+
+.cml-titlewrap > img {
+  position: absolute;
+  left: -25px;
+  top: 50%;
+  margin-top: -6px;
+}
+
+.cml-title {
+  padding: 3px 8px;
+  font-size: 1.7em;
+  line-height: 100%;
+  height: 1.7em;
+  width: 100%;
+  outline: 0;
+  margin: 0;
+  background-color: #fff;
+}
+
+form#post table.compat-attachment-fields tr[class*="compat-field-cml-media-title"] {
+  display: none;
+}
+
+
+.search {
+  background: #e4e4e4;
+  float: right;
+  padding: 5px;
+  height: 29px;
+  border: 1px solid #ccc;
+  border-bottom: none;
 }
