--- a/css/admin.css
+++ b/css/admin.css
@@ -1922,7 +1922,7 @@ form#post table.compat-attachment-fields tr[class*="compat-field-cml-media-title
   padding: 7px 5px 8px;
   transition: all 0.3s ease;
   position: relative;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 .cml-override-flags > label:hover > input + span {
